--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <a href="../lab1/Merdak_index.html">Лабораторна 1</a>
-    <a href="../lab2/index.html">Лабораторна 2</a>
+    <a href="../lab2/M_index.html">Лабораторна 2</a>
     <a href="">Лабораторна 3</a>    
 </body>
 </html>
