--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="btn1">
             <a class="btn" href="../lab1/Merdak_index.html">Лабораторна 1</a><br>
             <a class="btn" href="../lab2/M_index.html">Лабораторна 2</a><br>
-            <a class="btn" href="">Лабораторна 3</a><br>  
+            <a class="btn" href="../lab3/index.html">Лабораторна 3</a><br>  
         </div>
     </div>
 </body>
