--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="main1">
         <div class="btn1">
             <a class="btn" href="../lab1/Merdak_index.html">Лабораторна 1</a><br>
-            <a class="btn" href="../lab2/M_index.html">Лабораторна 2</a><br>
+            <a class="btn" href="../lab2/index.html">Лабораторна 2</a><br>
             <a class="btn" href="../lab3/index.html">Лабораторна 3</a><br>  
         </div>
     </div>
