--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -8,11 +8,11 @@
 <body>
     <div class="main1">
         <div class="btn1">
-            <a class="btn" href="html/Merdak_z1.html">Завдання 1</a>
-            <a class="btn" href="html/Merdak_1.html">Завдання 2.1</a>
-            <a class="btn" href="html/Merdak_2.html">Завдання 2.2</a>
-            <a class="btn" href="html/Merdak_3.html">Завдання 2.3</a>
-            <a class="btn" href="html/Merdak_4.html">Завдання 2.4</a>
+            <a class="btn" href="Html/Merdak_z1.html">Завдання 1</a>
+            <a class="btn" href="Html/Merdak_1.html">Завдання 2.1</a>
+            <a class="btn" href="Html/Merdak_2.html">Завдання 2.2</a>
+            <a class="btn" href="Html/Merdak_3.html">Завдання 2.3</a>
+            <a class="btn" href="Html/Merdak_4.html">Завдання 2.4</a>
         </div>
     </div>
 </body>
