--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a class="btn" href="../lab2/index.html">Лабораторна 2</a><br>
             <a class="btn" href="../lab3/index.html">Лабораторна 3</a><br>
             <a class="btn" href="../Lab4/index.html">Лабораторна 4</a><br>
+            <a class="btn" href="../lab5/html/Merdak.html">Лабораторна 5</a><br>
         </div>
     </div>
 </body>
