--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a class="btn" href="../lab5/html/Merdak.html">Лабораторна 5</a><br>
             <a class="btn" href="../lab6/html/Merdak.html">Лабораторна 6</a><br>
             <a class="btn" href="../lab7/Html/Merdak.html">Лабораторна 7</a><br>
+            <a class="btn" href="../lab8/Merdak_index.html">Лабораторна 8</a><br>
         </div>
     </div>
 </body>
