--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <a class="btn" href="../lab7/Html/Merdak.html">Лабораторна 7</a><br>
             <a class="btn" href="../lab8/Merdak_index.html">Лабораторна 8</a><br>
             <a class="btn" href="../lab9/index.html">Лабораторна 9</a><br>
-            <a class="btn" href="../KR/index.html">Контрольна робота(на парі)</a><br>
+            <a class="btn" href="../KR/index.html">Контрольна робота</a><br>
+            <a class="btn" href="../KR/index.html">Контрольна робота</a><br>
         </div>
     </div>
 </body>
